main.tf
provider "aws" {
  region = "eu-central-1"
}

data "aws_vpc" "default" {
  default = true
}

data "aws_subnet_ids" "default" {
  vpc_id = data.aws_vpc.default.id
}

resource "aws_launch_configuration" "play_recetas_javier" {
  image_id = "ami-05f96e4ee17556788"				###MODIFICAR POR EL CREADO DESDE EL JSON DE PACKER#####
  instance_type = "t2.micro"
  security_groups = [aws_security_group.instance.id]

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_autoscaling_group" "play_recetas_javier_asg" {
  launch_configuration = aws_launch_configuration.play_recetas_javier.name
  vpc_zone_identifier = data.aws_subnet_ids.default.ids

  target_group_arns = [aws_lb_target_group.play_recetas_javier_tg.arn]
  health_check_type = "ELB"

  min_size = 2
  max_size = 2

  tag {
    key = "tagName"
    value = "mimo-play-recetas-javier-asg"
    propagate_at_launch = true
  }
}

resource "aws_lb" "play_recetas_javier_lb" {
  name = "mimo-play-recetas-javier"
  load_balancer_type = "application"
  subnets = data.aws_subnet_ids.default.ids
  security_groups = [aws_security_group.play_recetas_javier_alb.id]
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.play_recetas_javier_lb.arn
  port = 80
  protocol = "HTTP"

  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "Page Not Found"
      status_code = 404
    }
  }
}

resource "aws_security_group" "play_recetas_javier_alb" {
  name = "mimo-play-recetas-javier-alb"
  
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_lb_target_group" "play_recetas_javier_tg" {
  name = "mimo-play-recetas-javier-tg"
  port = 80
  protocol = "HTTP"
  vpc_id = data.aws_vpc.default.id

  health_check {
    path = "/"
    protocol = "HTTP"
    matcher = "200"
    interval = 15
    timeout = 5
    healthy_threshold = 3
    unhealthy_threshold = 3
  }
}

resource "aws_lb_listener_rule" "asg" {
  listener_arn = aws_lb_listener.http.arn
  priority = 100

  condition {
    path_pattern {
      values = ["*"]
    }
  }

  action {
    type = "forward"
    target_group_arn = aws_lb_target_group.play_recetas_javier_tg.arn
  }
}

output "play_recetas_alb_dns_name" {
  value = aws_lb.play_recetas_javier_lb
  description = "Domain name of Play Recetas application load balancer"
}
